# payment-analytics-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
airflow/dags/: payments_etl_dag.py
app/: main.py
docs/adr/: 0001-payments-analytics-architecture.md
ingestion/: main.py
terraform/: iam.tf  main.tf  outputs.tf  s3.tf
transformation/: main.py
